committing to kurozuMember